--- a/src/EPiGraphQL.Api.csproj
+++ b/src/EPiGraphQL.Api.csproj
@@ -11,8 +11,8 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Eols.EPiGraphQL.Api</RootNamespace>
-    <AssemblyName>Eols.EPiGraphQL.Api</AssemblyName>
+    <RootNamespace>EPiGraphQL.Api</RootNamespace>
+    <AssemblyName>EPiGraphQL.Api</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
@@ -49,11 +49,11 @@
     <Reference Include="Castle.Windsor, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\packages\Castle.Windsor.4.1.0\lib\net45\Castle.Windsor.dll</HintPath>
     </Reference>
-    <Reference Include="Eols.EPiGraphQL.Cms, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Eols.EPiGraphQL.Cms.0.6.0-preview-4\lib\netstandard2.0\Eols.EPiGraphQL.Cms.dll</HintPath>
+    <Reference Include="EPiGraphQL.Cms, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\EPiGraphQL.Cms.0.6.0-preview-4\lib\netstandard2.0\EPiGraphQL.Cms.dll</HintPath>
     </Reference>
-    <Reference Include="Eols.EPiGraphQL.Core, Version=0.6.0.2, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Eols.EPiGraphQL.Core.0.6.0-preview-2\lib\netstandard2.0\Eols.EPiGraphQL.Core.dll</HintPath>
+    <Reference Include="EPiGraphQL.Core, Version=0.6.0.2, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\EPiGraphQL.Core.0.6.0-preview-2\lib\netstandard2.0\EPiGraphQL.Core.dll</HintPath>
     </Reference>
     <Reference Include="EPiServer, Version=11.9.4.0, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
       <HintPath>..\packages\EPiServer.CMS.Core.11.9.4\lib\net461\EPiServer.dll</HintPath>
