--- a/src/packages.config
+++ b/src/packages.config
@@ -2,8 +2,8 @@
 <packages>
   <package id="Castle.Core" version="4.2.1" targetFramework="net471" />
   <package id="Castle.Windsor" version="4.1.0" targetFramework="net471" />
-  <package id="Eols.EPiGraphQL.Cms" version="0.6.0-preview-4" targetFramework="net471" />
-  <package id="Eols.EPiGraphQL.Core" version="0.6.0-preview-2" targetFramework="net471" />
+  <package id="EPiGraphQL.Cms" version="0.6.0-preview-4" targetFramework="net471" />
+  <package id="EPiGraphQL.Core" version="0.6.0-preview-2" targetFramework="net471" />
   <package id="EPiServer.CMS.Core" version="11.9.4" targetFramework="net471" />
   <package id="EPiServer.Framework" version="11.9.4" targetFramework="net471" />
   <package id="GraphQL" version="2.0.0" targetFramework="net471" />
