--- a/src/EPiGraphQL.Api.csproj
+++ b/src/EPiGraphQL.Api.csproj
@@ -50,11 +50,11 @@
     <Reference Include="Castle.Windsor, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\packages\Castle.Windsor.4.1.0\lib\net45\Castle.Windsor.dll</HintPath>
     </Reference>
-    <Reference Include="EPiGraphQL.Cms, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\EPiGraphQL.Cms.0.6.0-preview-6\lib\netstandard2.0\EPiGraphQL.Cms.dll</HintPath>
+    <Reference Include="EPiGraphQL.Cms, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\EPiGraphQL.Cms.0.7.0\lib\netstandard2.0\EPiGraphQL.Cms.dll</HintPath>
     </Reference>
-    <Reference Include="EPiGraphQL.Core, Version=0.6.0.4, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\EPiGraphQL.Core.0.6.0-preview-4\lib\netstandard2.0\EPiGraphQL.Core.dll</HintPath>
+    <Reference Include="EPiGraphQL.Core, Version=0.7.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\EPiGraphQL.Core.0.7.0\lib\netstandard2.0\EPiGraphQL.Core.dll</HintPath>
     </Reference>
     <Reference Include="EPiServer, Version=11.9.4.0, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
       <HintPath>..\packages\EPiServer.CMS.Core.11.9.4\lib\net461\EPiServer.dll</HintPath>
