--- a/src/EPiGraphQL.Api.nuspec
+++ b/src/EPiGraphQL.Api.nuspec
@@ -5,9 +5,10 @@
     <version>0.6.2</version>
     <authors>Emil Olsson</authors>
     <owners>Emil Olsson</owners>
+    <tags>EPiServer GraphQL Api</tags>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <projectUrl>https://github.com/lillheaton/EPiGraphQL.Api</projectUrl>
-    <description>nfas fnaslnf</description>
+    <description>Plug and play EPiServer GraphQL service</description>
     <releaseNotes/>
     <copyright>Copyright 2018</copyright>
     <dependencies>
