--- a/src/Graphify.EPiServer.Api.csproj
+++ b/src/Graphify.EPiServer.Api.csproj
@@ -11,8 +11,8 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EPiGraphQL.Api</RootNamespace>
-    <AssemblyName>EPiGraphQL.Api</AssemblyName>
+    <RootNamespace>Graphify.EPiServer.Api</RootNamespace>
+    <AssemblyName>Graphify.EPiServer.Api</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
@@ -50,11 +50,11 @@
     <Reference Include="Castle.Windsor, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\packages\Castle.Windsor.4.1.0\lib\net45\Castle.Windsor.dll</HintPath>
     </Reference>
-    <Reference Include="EPiGraphQL.Cms, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\EPiGraphQL.Cms.0.7.0\lib\netstandard2.0\EPiGraphQL.Cms.dll</HintPath>
+    <Reference Include="Graphify.EPiServer.Cms, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Graphify.EPiServer.Cms.0.7.0\lib\netstandard2.0\Graphify.EPiServer.Cms.dll</HintPath>
     </Reference>
-    <Reference Include="EPiGraphQL.Core, Version=0.7.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\EPiGraphQL.Core.0.7.0\lib\netstandard2.0\EPiGraphQL.Core.dll</HintPath>
+    <Reference Include="Graphify.EPiServer.Core, Version=0.7.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Graphify.EPiServer.Core.0.7.0\lib\netstandard2.0\Graphify.EPiServer.Core.dll</HintPath>
     </Reference>
     <Reference Include="EPiServer, Version=11.9.4.0, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
       <HintPath>..\packages\EPiServer.CMS.Core.11.9.4\lib\net461\EPiServer.dll</HintPath>
