--- a/src/Graphify.EPiServer.Api.nuspec
+++ b/src/Graphify.EPiServer.Api.nuspec
@@ -9,7 +9,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <projectUrl>https://github.com/lillheaton/Graphify.EPiServer.Api</projectUrl>
     <description>Plug and play EPiServer GraphQL service</description>
-    <license>MIT</license>
+    <license type="expression">MIT</license>
     <releaseNotes/>
     <copyright>Copyright 2018</copyright>
     <dependencies>
